Fixed blog-preview style on mobile and implemented dynamic display for the post

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -7,6 +7,6 @@
 
 @media only screen and (min-width: 1000px) {
   .blog-preview {
-    width: 900px;
+    width: 500px;
   }
 }
