--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -1,8 +1,8 @@
 .post {
-  padding: 20px 80px;
   border-radius: 20px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
   transition: all 150ms ease-in-out;
+  height: fit-content;
 }
 
 .post:hover {
@@ -11,7 +11,10 @@
 }
 
 .post-info {
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  line-height: 3em;
+  margin: 20px 0px;
+  line-height: 1em;
+}
+
+.post-content {
+  margin: 20px 40px 40px;
 }
